Redesigned part of the API and bound all Webapp functionalities to back-end
