# API/tasks.py
@@ -1,28 +1,19 @@
 # -*- coding: utf-8 -*-
-import multiprocessing as mp
 import traceback
-
+from multiprocessing import cpu_count
 from threading import Thread
 from concurrent.futures import ThreadPoolExecutor, as_completed
-
-from API.Metric.SimpleFunction import SimpleFunction
-from API.Metric.KNeighbors import KNeighbors
-from API.Metric.RandomForest import RandomForest
-from API.Metric.SVM import SVM
 
 from API.EarlyStoppings.NoEarlyStopping import NoEarlyStopping
 from API.EarlyStoppings.RandomEarlyStopping import RandomEarlyStopping
 from API.EarlyStoppings.SimilarityEarlyStopping import SimilarityEarlyStopping
 
-from API.Algorithms.GridSearch import GridSearch
-from API.Algorithms.RandomSearch import RandomSearch
-from API.Algorithms.ScatterSearch import ScatterSearch
-from API.Algorithms.BayesianOptimization import BayesianOptimization
-from API.Algorithms.Tpe import Tpe
+from API.Algorithms import *
+from API.Metrics import *
 
 from API.choices import TYPE, STATUS
 from API.models import Parameter, Trial
-from API.serializers import TrialSerializer
+from API.serializers import TrialSerializer, ParameterSerializer
 
 
 def early_stopping(trials, old_trials):
@@ -49,30 +40,19 @@ def early_stopping(trials, old_trials):
         yield trial
 
 
-def worker(model_name, type='c', dataset='iris', **trial):
+def worker(metric, dataset, **trial):
     """
     Evaluation worker. Take a trial and a model and evaluates the trial
     against the model.
 
     Args:
-        :param model_name: name of the model to use as a metric
-        :param type: type of model ('c' = classifier or 'r' = regressor)
+        :param metric: name of the model to use as a metric
         :param dataset: name of the dataset to use with the model
         :param trial: dictionary of param names and values
     :return:
     """
-    if model_name == 'Svm':
-        model = SVM(type=type, dataset_name=dataset)
-    elif model_name == 'SimpleFunction':
-        model = SimpleFunction(type=type, dataset_name=dataset)
-    elif model_name == 'KNeighbors':
-        model = KNeighbors(type=type, dataset_name=dataset)
-    elif model_name == 'RandomForest':
-        model = RandomForest(type=type, dataset_name=dataset)
-    else:
-        raise ValueError("Not existing model {}".format(model_name))
-
-    results = model.evaluate(trial)
+    metric = Metric.instance(metric, dataset)
+    results = metric.evaluate(trial)
     if 'score' not in results:
         msg = "Model {} does not return score".format(trial['model'])
         raise ValueError(msg)
@@ -82,8 +62,7 @@ def worker(model_name, type='c', dataset='iris', **trial):
 
 class Suggestion(Thread):
 
-    def __init__(self, study_name, alg_name, model_name,
-                 model_type='c', dataset='iris', runs=5,
+    def __init__(self, study_name, alg_name, metric, dataset, runs=5,
                  budget=30, num_suggestions=10, name=None, daemon=True):
         """
         Initialize the suggestion worker.
@@ -91,8 +70,7 @@ class Suggestion(Thread):
         Args:
             :param study_name: name of the study
             :param alg_name: name of the algorithm
-            :param model_name: name of the model to use as a metric
-            :param model_type: type of model (c = classifier or r = regressor)
+            :param metric: name of the model to use as a metric
             :param dataset: name of the dataset to use with the model
             :param runs: how many times the algorithm is launched
             :param budget: budget available for each suggestion generation
@@ -103,38 +81,14 @@ class Suggestion(Thread):
         Thread.__init__(self, name=name, daemon=daemon)
 
         self.study_name = study_name
-        self.model_name = model_name
+        self.model_name = metric
         self.runs = runs
         self.budget = budget
         self.num_suggestions = num_suggestions
-        self.model_type = model_type
         self.dataset = dataset
 
-        self.algorithm = self.__algorithm(alg_name)
+        self.algorithm = Algorithm.instance(alg_name)
         self.space = self.__space(study_name)
-
-    def __algorithm(self, name):
-        """
-        Get the algorithm object associated to the name or raise and exception.
-
-        Args:
-            :param name: algorithm name
-        :return:
-        """
-        if name == "RandomSearch":
-            algorithm = RandomSearch()
-        elif name == "GridSearch":
-            algorithm = GridSearch()
-        elif name == "ScatterSearch":
-            algorithm = ScatterSearch()
-        elif name == "BayesianOptimization":
-            algorithm = BayesianOptimization()
-        elif name == "TPE":
-            algorithm = Tpe()
-        else:
-            raise ValueError("Not existing algorithm {}".format(name))
-
-        return algorithm
 
     def __space(self, study_name):
         """
@@ -145,21 +99,17 @@ class Suggestion(Thread):
             :param study_name: study name to use for filtering the parameters
         :return:
         """
-        space = Parameter.objects.filter(study_name=study_name).values()
+        data = Parameter.objects.filter(study=study_name)
+        serializer = ParameterSerializer(data=data, many=True)
+        space = serializer.to_representation(data)
 
         for param in space:
-
             if param['type'] == TYPE.INTEGER:
                 param['min'] = int(param['min'])
                 param['max'] = int(param['max'])
 
             elif param['type'] == TYPE.DISCRETE:
-                param['values'] = [float(val)
-                                   for val in param['values'].split(',')]
-
-            elif param['type'] == TYPE.CATEGORICAL:
-                param['values'] = [val.strip()
-                                   for val in param['values'].split(',')]
+                param['values'] = [float(val) for val in param['values']]
 
         return space
 
@@ -173,7 +123,7 @@ class Suggestion(Thread):
             :param status: trial status (stopped or completed)
         """
         data = {
-            'study_name': self.study_name,
+            'study': self.study_name,
             'parameters': trial,
             'status': status.name
         }
@@ -195,11 +145,11 @@ class Suggestion(Thread):
         The tasks given to each thread are CPU-bound.
         TODO: try to switch to process pool, better for CPU-bound tasks
         """
-        with ThreadPoolExecutor(max_workers=mp.cpu_count()) as pool:
+        with ThreadPoolExecutor(max_workers=cpu_count()) as pool:
 
             for _ in range(self.runs):
                 # Filter only completed trials
-                queryset = Trial.objects.filter(study_name=self.study_name)
+                queryset = Trial.objects.filter(study=self.study_name)
                 old_trials = TrialSerializer(queryset, many=True).data
 
                 trials = self.algorithm.get_suggestions(self.space, old_trials)
@@ -209,8 +159,7 @@ class Suggestion(Thread):
                     self.__save(trial, {}, STATUS.STOPPED)
 
                 threads = {pool.submit(worker,
-                                       model_name=self.model_name,
-                                       type=self.model_type,
+                                       metric=self.model_name,
                                        dataset=self.dataset,
                                        **trial): trial for trial in trials}
 
